refactor(monzo): use List.getLast() for pagination cursor
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01T7ibpqWAskYmyPmrJKYcTt